--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -100,7 +100,8 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/custom.scss"
             ],
             "scripts": []
           }
